# djura

./: pyproject.toml
.github/workflows/: CI.yaml
djura/adapters/: file_system_project_reader.py
djura/entities/: directory.py  file.py  filename.py  filename_triggered_tool.py  project.py  text_file.py  tool.py  toolkit.py  version.py
djura/entities/tools/: poetry.py  python.py  sam_cli.py  yarn.py
djura/ports/: project_reader.py
tests/adapters/: test_file_system_project_reader.py
tests/adapters/test-project/: binary-file  regular-file
tests/entities/: strategies.py  test_filename_triggered_tool.py  test_toolkit.py
tests/entities/tools/: test_poetry.py  test_python.py  test_yarn.py
