[tool.poetry]
name = "djura"
version = "0.1.0"
description = "Automatic fetching of development tools via Nix."
authors = ["Nazar Vinnichuk <nazar@vinnich.uk>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
tomli = "^2.0.1"
poetry-core = "^1.0.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"
mypy = "^0.961"
isort = "^5.10.1"
coverage = "^6.4.1"
pytest-testmon = "^1.3.3"
hypothesis = "^6.48.2"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--testmon --import-mode importlib"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    '\s\.\.\.$'
]

[[tool.mypy.overrides]]
module = "poetry.core.semver"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
